# panelist

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml  docs.yml  release.yml
cmake/: package.cmake  panelist_version.hpp.in
examples/: three_panels.cpp
include/panelist/: panelist.hpp  panelist_version.hpp
tests/: compile_api.cpp
tests/fetch_content_consumer/: CMakeLists.txt  main.cpp
